# understory

./: AUTHORS  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/benches/: index_compare_backends.rs  rtree_external_compare.rs
examples/: Cargo.toml  README.md
examples/examples/: box_tree_basics.rs  box_tree_visible_list.rs  index_basics.rs  responder_basics.rs  responder_box_tree.rs  responder_hover.rs
understory_box_tree/: Cargo.toml  README.md
understory_box_tree/examples/: basic_box_tree.rs  visible_list.rs
understory_box_tree/src/: lib.rs  tree.rs  types.rs
understory_index/: Cargo.toml  README.md
understory_index/examples/: basic_index.rs
understory_index/src/: backend.rs  damage.rs  index.rs  lib.rs  types.rs
understory_index/src/backends/: bvh.rs  flatvec.rs  grid.rs  mod.rs  rtree.rs
understory_responder/: Cargo.toml  README.md
understory_responder/src/: hover.rs  lib.rs  router.rs  types.rs
understory_responder/src/adapters/: box_tree.rs  mod.rs
