[package]
name = "understory_box_tree"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Kurbo-native spatially indexed box tree with transforms, clips, z-order, and damage accounting."
repository = "https://github.com/endoli/understory"
keywords = ["spatial", "scene", "aabb", "ui", "graphics"]
categories = ["data-structures", "graphics", "no-std"]

[dependencies]
kurbo.workspace = true
bitflags.workspace = true
understory_index = { path = "../understory_index" }

[lints]
workspace = true

[features]
# Default to std builds for examples/tests/docs.
default = ["std"]
# Forward our `std`/`libm` features to Kurbo. With workspace `kurbo` having
# default-features = false, this fully controls Kurbo's std/no_std mode.
std = ["kurbo/std"]
libm = ["kurbo/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
