[package]
name = "understory_index"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Generic 2D AABB index with point/rect queries, batched damage, and pluggable backends."
repository = "https://github.com/endoli/understory"
keywords = ["spatial", "aabb", "index", "rtree", "bvh"]
categories = ["data-structures", "graphics", "no-std"]

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
